// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications: index component with (enterprise mode) initial values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row smd-pad-12\\">
    <div className=\\"col-sm-6\\">
      <h3>
        Apps
      </h3>
    </div>
    <div className=\\"col-sm-6 text-right\\">
      <Blueprint.Button text=\\"Request Token\\" onClick={[undefined]} className=\\"right-align\\" />
      <Blueprint.Tooltip content={{...}} inline={true} position={10} isDisabled={true} hoverCloseDelay={0} hoverOpenDelay={100} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={100} useSmartArrowPositioning={true} useSmartPositioning={false}>
        <Link className=\\"right-align\\" to=\\"/launchpad\\" replace={false}>
          <button type=\\"button\\" className=\\"pt-button pt-intent-primary\\" disabled={false}>
            Deploy
          </button>
        </Link>
      </Blueprint.Tooltip>
    </div>
  </div>
  <div>
    <withRouter(Connect(ApplicationCard)) app={{...}} />
  </div>
  <withRouter(Connect(TokenRequest)) />
</div>"
`;

exports[`Applications: index component with (enterprise mode) without values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row smd-pad-12\\">
    <div className=\\"col-sm-6\\">
      <h3>
        Apps
      </h3>
    </div>
    <div className=\\"col-sm-6 text-right\\">
      <Blueprint.Button text=\\"Request Token\\" onClick={[undefined]} className=\\"right-align\\" />
      <Blueprint.Tooltip content={{...}} inline={true} position={10} isDisabled={true} hoverCloseDelay={0} hoverOpenDelay={100} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={100} useSmartArrowPositioning={true} useSmartPositioning={false}>
        <Link className=\\"right-align\\" to=\\"/launchpad\\" replace={false}>
          <button type=\\"button\\" className=\\"pt-button pt-intent-primary\\" disabled={false}>
            Deploy
          </button>
        </Link>
      </Blueprint.Tooltip>
    </div>
  </div>
  <div>
    <div className=\\"row\\" style={{...}}>
      <div className=\\"col-sm-12 text-center\\">
        Deploy an application to get started
      </div>
    </div>
  </div>
  <withRouter(Connect(TokenRequest)) />
</div>"
`;

exports[`Applications: index component with (public mode) application data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={
      Array [
        Object {
          "address": "e80b681c42f831ea3c4b8db531f5e165",
          "appName": "dAPP",
          "isLoading": true,
          "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
          "version": "1.0",
        },
      ]
    }
    fetchApplications={[Function]}
    location={
      Object {
        "search": "?developer",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-6"
          >
            <h3>
              Apps
            </h3>
          </div>
          <div
            className="col-sm-6 text-right"
          />
        </div>,
        <div>
          <withRouter(Connect(ApplicationCard))
            app={
              Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              }
            }
          />
        </div>,
        <withRouter(Connect(TokenRequest)) />,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>,
            <div
              className="col-sm-6 text-right"
            />,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Apps
              </h3>,
              "className": "col-sm-6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Apps",
              },
              "ref": null,
              "rendered": "Apps",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
              ],
              "className": "col-sm-6 text-right",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "app": Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>
            <div
              className="col-sm-6 text-right"
            />
          </div>,
          <div>
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />
          </div>,
          <withRouter(Connect(TokenRequest)) />,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-6"
              >
                <h3>
                  Apps
                </h3>
              </div>,
              <div
                className="col-sm-6 text-right"
              />,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Apps
                </h3>,
                "className": "col-sm-6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Apps",
                },
                "ref": null,
                "rendered": "Apps",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  undefined,
                ],
                "className": "col-sm-6 text-right",
              },
              "ref": null,
              "rendered": Array [
                undefined,
                undefined,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ApplicationCard))
                app={
                  Object {
                    "address": "e80b681c42f831ea3c4b8db531f5e165",
                    "appName": "dAPP",
                    "isLoading": true,
                    "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                    "version": "1.0",
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "function",
              "props": Object {
                "app": Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Applications: index component with (public mode) initial values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row smd-pad-12\\">
    <div className=\\"col-sm-6\\">
      <h3>
        Apps
      </h3>
    </div>
    <div className=\\"col-sm-6 text-right\\">
      <Blueprint.Button text=\\"Request Token\\" onClick={[undefined]} className=\\"right-align\\" />
      <Blueprint.Tooltip content={{...}} inline={true} position={10} isDisabled={true} hoverCloseDelay={0} hoverOpenDelay={100} openOnTargetFocus={true} rootElementTag=\\"span\\" transitionDuration={100} useSmartArrowPositioning={true} useSmartPositioning={false}>
        <Link className=\\"right-align\\" to=\\"/launchpad\\" replace={false}>
          <button type=\\"button\\" className=\\"pt-button pt-intent-primary\\" disabled={false}>
            Deploy
          </button>
        </Link>
      </Blueprint.Tooltip>
    </div>
  </div>
  <div>
    <withRouter(Connect(ApplicationCard)) app={{...}} />
  </div>
  <withRouter(Connect(TokenRequest)) />
</div>"
`;

exports[`Applications: index component with (public mode) without values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <div className=\\"row smd-pad-12\\">
    <div className=\\"col-sm-6\\">
      <h3>
        Apps
      </h3>
    </div>
    <div className=\\"col-sm-6 text-right\\" />
  </div>
  <div>
    <div className=\\"row\\" style={{...}}>
      <div className=\\"col-sm-12 text-center\\">
        No Applications found
      </div>
    </div>
  </div>
  <withRouter(Connect(TokenRequest)) />
</div>"
`;

exports[`Applications: index componentWillUnmount 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Applications
    applications={
      Array [
        Object {
          "address": "e80b681c42f831ea3c4b8db531f5e165",
          "appName": "dAPP",
          "isLoading": true,
          "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
          "version": "1.0",
        },
      ]
    }
    fetchApplications={[Function]}
    location={
      Object {
        "search": "?developer",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row smd-pad-12"
        >
          <div
            className="col-sm-6"
          >
            <h3>
              Apps
            </h3>
          </div>
          <div
            className="col-sm-6 text-right"
          />
        </div>,
        <div>
          <withRouter(Connect(ApplicationCard))
            app={
              Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              }
            }
          />
        </div>,
        <withRouter(Connect(TokenRequest)) />,
      ],
      "className": "container-fluid pt-dark",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>,
            <div
              className="col-sm-6 text-right"
            />,
          ],
          "className": "row smd-pad-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Apps
              </h3>,
              "className": "col-sm-6",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Apps",
              },
              "ref": null,
              "rendered": "Apps",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                undefined,
                undefined,
              ],
              "className": "col-sm-6 text-right",
            },
            "ref": null,
            "rendered": Array [
              undefined,
              undefined,
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "0",
            "nodeType": "function",
            "props": Object {
              "app": Object {
                "address": "e80b681c42f831ea3c4b8db531f5e165",
                "appName": "dAPP",
                "isLoading": true,
                "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                "version": "1.0",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row smd-pad-12"
          >
            <div
              className="col-sm-6"
            >
              <h3>
                Apps
              </h3>
            </div>
            <div
              className="col-sm-6 text-right"
            />
          </div>,
          <div>
            <withRouter(Connect(ApplicationCard))
              app={
                Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                }
              }
            />
          </div>,
          <withRouter(Connect(TokenRequest)) />,
        ],
        "className": "container-fluid pt-dark",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-sm-6"
              >
                <h3>
                  Apps
                </h3>
              </div>,
              <div
                className="col-sm-6 text-right"
              />,
            ],
            "className": "row smd-pad-12",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Apps
                </h3>,
                "className": "col-sm-6",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Apps",
                },
                "ref": null,
                "rendered": "Apps",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  undefined,
                  undefined,
                ],
                "className": "col-sm-6 text-right",
              },
              "ref": null,
              "rendered": Array [
                undefined,
                undefined,
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(ApplicationCard))
                app={
                  Object {
                    "address": "e80b681c42f831ea3c4b8db531f5e165",
                    "appName": "dAPP",
                    "isLoading": true,
                    "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                    "version": "1.0",
                  }
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "function",
              "props": Object {
                "app": Object {
                  "address": "e80b681c42f831ea3c4b8db531f5e165",
                  "appName": "dAPP",
                  "isLoading": true,
                  "url": "http://stratodev.blockapps.net/apps/e80b681c42f831ea3c4b8db531f5e165/",
                  "version": "1.0",
                },
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
          "getChildContext": Object {
            "calledByRenderer": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Applications: index mapStateToProps with default state 1`] = `
Object {
  "applications": Array [],
  "isLoggedIn": false,
}
`;
